# advent-of-code

./: .gitignore  Cargo.toml  README.md  test.js  test.py  test2.js
2015/: package-lock.json  package.json
2015/Day01-Not-Quite-Lisp/: day01.test.ts  day01.ts  input.ts
2015/Day02-No-Math/: day02.test.ts  day02.ts  input.ts
2015/Day03-Houses/: day03.test.ts  day03.ts  input.ts
2015/Day04-md5/: day04.test.ts  day04.ts
2015/Day05-Nice-Strings/: day05.test.ts  day05.ts  input.ts
2015/Day06-Light-Grid/: day06.test.ts  day06.ts  input.ts
2015/Day07-Logic-Gates/: day07.test.ts  day07.ts  input.ts
2015/Day08-Matchsticks/: count.ts  day08.test.ts  day08.ts  input.ts
2015/Day09-Single-Night/: day09.test.ts  day09.ts  input.ts
2015/Day10-Look-Say/: day10.test.ts  day10.ts
2015/Day11-Passwords/: day11.test.ts  day11.ts
2015/Day12-JSON/: day12.test.ts  day12.ts  input.ts
2015/Day13-Knights-Table/: day13.test.ts  day13.ts  input.ts
2015/Day14-Olympics/: day13.test.ts  day13.ts  input.ts
2015/Day15-Hunger/: day15.test.ts  day15.ts  input.ts
2015/Day16-Aunt-Sue/: day16.test.ts  day16.ts  input.ts
2015/Day17-Liters/: day17.test.ts  day17.ts  input.ts
2015/Day18-Yard-Lights/: day18.test.ts  day18.ts  input.ts
2015/Day19-Medicine/: day19.test.ts  day19.ts  input.ts
2017/: Cargo.toml
2021/: .prettierrc  package-lock.json  package.json
2022/: package-lock.json  package.json
2024/: Cargo.toml
migrations/: 20241124171915_init_inputs_table.sql  20241201175152_init_answers_table.sql
src/: cli.rs  data_store.rs  http.rs  main.rs  puzzle.rs
(+295 files in other folders)
