[package]
name = "advent-of-code-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorized = "1.0.0"
clap = { version = "4.5.21", features = ["derive"] }
dotenvy_macro = "0.15.7"
sqlx = {version = "0.8.2",  features = [ "sqlite", "runtime-tokio", "tls-native-tls" ] }
tokio = {version = "1.41.1", features=["rt", "macros"]}
dotenvy = "0.15.7"
reqwest = "0.12.9"
common = { path = "./common" }
year2017 = { path = "./2017" }
